# master-thesis

./: .gitignore  README.md  convert_plots.py  convert_with_preview.sh  requirements.txt
Article/: article_data.csv  get_data.py
Code/C/: CMakeLists.txt  main.cpp
Code/C/Legacy/: main.cpp
Code/C/model/: zs_ddpg_traced_deterministic.pt  zs_ppo_traced_deterministic.pt  zs_td3_traced_deterministic.pt
Code/C/src/: main.cpp
Code/Environment/: env.ipynb  env_3body.ipynb
Code/MBK/: MBK.ipynb
Code/PID/: AOM_RL.slx
Code/PID/MATLAB/: AOM_RL.slx  AOM_RL.slx.autosave
Code/Python/Algorithms/DDPG/: DDPG.py
Code/Python/Algorithms/PPO/: PPO.py  PPO_utilz.py  Zero_Sum_PPO.py
Code/Python/Algorithms/SAC/: Zero_Sum_SAC.py
Code/Python/Algorithms/TD3/: Zero_Sum_TD3.py
Code/Python/Benchmark/Ant/: ant_learning.ipynb
Code/Python/DDPG/: DDPG.ipynb
Code/Python/Environment/: TBP.py  env.ipynb  env_3body.ipynb  env_3body_p_guidance.ipynb  load_model_env_3body.ipynb
Code/Python/MBK/: DDPG.ipynb  DDPG_MBK.ipynb  MBK.ipynb  MBK_P.ipynb  MBK_env.ipynb  SARSA.ipynb  TD3_LQR.ipynb  TD3_des_PID.ipynb  TD3_des_PID_deep.ipynb  TD3_des_PID_deep_ISE.ipynb  TD3_des_change.ipynb  TD3_des_new_format.ipynb  TD3_des_ramp.ipynb  TD3_sin.ipynb  ddpg_MBK.ipynb  ddpg_MBK_z2h.ipynb  mbk_actor.h5  mbk_critic.h5  mbk_target_actor.h5  mbk_target_critic.h5  model.h5  pendulum_actor.h5  pendulum_critic.h5  pendulum_target_actor.h5  pendulum_target_critic.h5  td3_des_new_format.py  td3_lqr.py
Code/Python/MBK/.ipynb_checkpoints/: TD3_des_new_format-checkpoint.ipynb
Code/Python/MBK/Classic/: MBK_P.ipynb
Code/Python/MBK/DDPG/: DDPG_MBK_I.ipynb  DDPG_MBK_I_disturbance.ipynb  MBK_actor.weights.h5  MBK_target_actor.weights.h5  ddpg_MBK.ipynb  ddpg_MBK_fixed.ipynb
Code/Python/MBK/PPO/: PPO_MBK.ipynb  PPO_MBK.py  PPO_MBK_HP_optimize.ipynb  ppo.py  ppo_torch.ipynb  ppo_torch.py
Code/Python/MBK/SAC/: SAC_MBK.ipynb  SAC_MBK.py
Code/Python/MBK/TD3/: TD3_des.ipynb  TD3_des_2_action.ipynb  TD3_des_PID_deep.ipynb  TD3_des_complicated.ipynb  TD3_des_deep.ipynb  TD3_des_p.ipynb  TD3_des_ramp.ipynb  (+1 more)
Code/Python/ROS_env/: TBP_env_ROS.py
Code/Python/SandBox/: PPO_colab.ipynb  PPO_colab_test_MBK.ipynb  TD3.ipynb  TD3_TBP.ipynb  TD3_des.ipynb  TD3_des_RL1.ipynb  TD3_random.ipynb  actor  ddpg_3body-2.ipynb  env_3body_p_guidance.ipynb  lunar.ipynb  my_ppo.ipynb  my_ppo.py  my_ppo_des.py  my_ppo_error.py  my_ppo_std.py  ppo.ipynb  ppo_cartpole.ipynb  ray.ipynb  td3_des.py  td3_tbp.py  test.py  torch_doc.ipynb
Code/Python/TBP/: TD3_PID_deep.ipynb  TD3_TBP.ipynb  TD3_TBP_deep_result.ipynb  TD3_TBP_pre_trained.ipynb  TD3_TBP_pre_trained.py  TD3_TBP_pre_trained_deep.ipynb  actor  actor_deep  ddpg_3body.ipynb  ddpg_TBP_z2h.ipynb  env_3body.ipynb  env_3body_DDPG.ipynb  env_3body_p_guidance_torch_deep.ipynb  model.h5  ppo_env_3body.ipynb
Code/Python/sanbox/: Zero_Sum_DDPG.py  ant.ipynb  test_ddpg.ipynb
Code/Python/utils/: model_downloader.py
Code/ROS2/: data_log_20250714_131556.csv  data_log_20250724_135615.csv  data_log_20250724_144354.csv  data_log_20250724_145021.csv  data_log_20250724_150503.csv  read.ipynb
Code/ROS2/src/tbp_sac_controler/: CMakeLists.txt  package.xml
Code/ROS2/src/tbp_sac_controler/src/: sac_tbp_controler.cpp
Code/Simulink/P/: init.m  ploter.m  test_speed.m  three_body_P.slxc  three_body_P_matlab_function.slxc
Code/Simulink/PID/: init.asv  init.m  test_speed.m  three_body_PID.slx  three_body_PID.slxc  three_body_PID_matlab_function.slx  three_body_PID_matlab_function.slxc
Code/Simulink/RL/: RL.slx  actor_critic.m
Code/Trajectory/: ploter.m
Code/realtime/src/sac_mbk_controler/: CMakeLists.txt  package.xml
Code/realtime/src/sac_mbk_controler/src/: sac_mbk_controler.cpp
Code/realtime/src/tbp_sac_controler/: CMakeLists.txt  package.xml
Code/realtime/src/tbp_sac_controler/src/: sac_tbp_controler.cpp
Code/realtime/src/tbp_sac_controler/src/model/: sac_model.pt
Code/realtime/src/torch_interface_node/: CMakeLists.txt  package.xml
Code/realtime/src/torch_interface_node/model/: pi_model_traced.pt
Code/realtime/src/torch_interface_node/src/: torch_inference_node.cpp
Code/realtime/src/torch_interface_node/src/model/: sac_model.pt
Code/ros_legacy/bag_saved_data/: read_bag.ipynb
Paper/: ZS-MARL.tex
Presentation/: RLDG.key  RLDG.pptx
Presentation/thesis_defense/: presentation.tex
Presentation/thesis_defense/Chapters/: MARL.tex  RL.tex  algorithm.tex  intro.tex  model.tex  results.tex
Proposal/: bibs.tex  chapters.docx  intro.pages  main.tex  proposal.docx  refs.bib  scenarios.pages  ~$apters.docx  مقدمه.docx
Proposal/bibs/: bibs.tex  refs.bib
Proposal/styles/: common.tex
Report/: thesis.tex
Report/Chapters/: sandbox.tex
Report/Chapters/Agent_simulation/: Agent_simulation.tex  agent_nn.tex  critic_nn.tex  design.tex  parameter.tex
Report/Chapters/Conclusion/: Conclusion.tex
Report/Chapters/HIL/: HIL.tex
Report/Chapters/Introduction/: Content.tex  Introduction.tex  MARL.tex  Motivation.tex  ObjectivesInnovation.tex  ProblemDefinition.tex  RL.tex
Report/Chapters/Literature_Review/: Differential_Games.tex  Inter_Orbital_Missions.tex  Literature_Review.tex  Multi-agent.tex  Reinforcement_Learning.tex  Relationship.tex
Report/Chapters/MARL/: MADDPG.tex  MAPPO.tex  MARL.tex  MARL_importance.tex  MASAC.tex  MATD3.tex  algorithms.tex  def.tex  games.tex  nash.tex  safe.tex  zero_sum.tex
Report/Chapters/RL/: Concept.tex  DDPG.tex  PPO.tex  RL.tex  SAC.tex  TD3.tex
Report/Chapters/Results/: ddpg.tex  ppo.tex  results.tex  sac.tex  std.tex  td3.tex  zs.tex
Report/Chapters/Simulation/: CRTBP.tex  Lagrange_Points.tex  Simulation.tex
Report/bibs/: bibs.tex  refs.bib
Report/front/: abstract-eng.tex  abstract.tex  acknowledge.tex  info.tex
Report/front/template/: besmellah.tex  signatures.tex  title-eng.tex  title.tex
Report/plots/data/: trajectory_latex.csv
Report/sandbox/: state.csv
Report/styles/: common.tex
Summary/: thesis_summary.tex
Why/: why.tex
__cmake_systeminformation/: CMakeCache.txt  Makefile  cmake_install.cmake  results.txt
(+707 files in other folders)
